# py_mod2

./: .gitignore
mod_05/ex0/: stream_processor.py
mod_05/ex1/: data_stream.py
mod_05/ex2/: nexus_pipeline.py
mod_06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
mod_06/alchemy/: __init__.py  potions.py
mod_06/alchemy/grimoire/: spellbook.py  validator.py
mod_07/: __init__.py
mod_07/ex0/: Card.py  CreatureCard.py  main.py
mod_07/ex1/: ArtifactCard.py  Deck.py  SpellCard.py  main.py
mod_07/ex2/: EliteCard.py  main.py
mod_07/ex3/: AggressiveStrategy.py  CardFactory.py  FantasyCardFactory.py  GameEngine.py  main.py
mod_07/ex4/: TournamentCard.py  TournamentPlatform.py  main.py
mod_08/ex0/: construct.py
mod_08/ex1/: loading.py  pyproject.toml  requirements.txt
mod_08/ex2/: .env  .env.example  oracle.py
mod_08/matrix.env/: pyvenv.cfg
mod_09/ex0/: space_station.py
mod_09/ex1/: alien_contact.py
mod_09/ex2/: space_crew.py
mod_10/ex0/: lambda_spells.py
mod_10/ex1/: higher_magic.py
mod_10/ex2/: scope_mysteries.py
mod_10/ex3/: functools_artifacts.py
mod_10/ex4/: decorator_mastery.py
